--- a/templates/comment_box/post_comment_box.html
+++ b/templates/comment_box/post_comment_box.html
@@ -1,10 +1,10 @@
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>-->
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>-->
 
 {% from 'helpers.html' import post_comment_macro with context %}
                     {{ post_comment_macro(comment, dict_like) }}
 <script>
-$(".form-horizontal.edit_comment").submit(function(event) {
+$("form.edit_comment").submit(function(event) {
     var id = "{{comment.id}}";
     alert(123);
     var formData = new FormData($(this)[0]);
@@ -25,6 +25,14 @@ $(".form-horizontal.edit_comment").submit(function(event) {
         }
     });
     event.preventDefault();
+});
+$(document).ready(function() {
+
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.post-form.comment-login").on("click", RenderPostCommentForm);
+    $(".discussion.product-form.comment-login").on("click", RenderProductCommentForm);
 });
 
 </script>
