--- a/templates/crop_image.html
+++ b/templates/crop_image.html
@@ -26,19 +26,21 @@
 
 
   <div class="container">
-<div class="ct-sectionHeader ct-u-paddingBoth20">
-        <h2 class="ct-u-size34">Crop yor avatar</h2>
-    </div>
-    <div>
-        <img id="image" src="{{ url_for('uploaded_file',filename= user.avatar) }}" alt="Picture">
 
+       <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="ct-sectionHeader ct-u-paddingBoth20">
+                    <h2 class="ct-u-size34">Crop yor avatar</h2>
+                </div>
+                <div>
+                <img src="{{ url_for('uploaded_file',filename=user.avatar) }}" />
 
-    </div>
-    <button type="button" id="button" class="btn btn-motive btn-form" >Crop</button>
-    <div id="result"></div>
-  </div>
-
-
+                </div>
+                <button type="button" id="button" class="btn btn-motive btn-form" >Crop</button>
+                <div id="result"></div>
+              </div>
+       </div>
+       </div>
 <script>
     (function () {
       function getRoundedCanvas(sourceCanvas) {
