--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1526,20 +1526,73 @@ ul.like-left.like-inline{
 
 }
 
-
-img.liked, img.unliked, img.smile, .like-not-login{
-    width: 30px;
-    box-shadow:-3px 1px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 12px !important;
+img.liked, img.unliked, .popup-div img{
+    cursor: pointer;
 }
 
+
+.reaction-button img{
+    width: 30px;
+
+}
+
+
+
+.reaction-counter img {
+    width: 25px;
+    box-shadow:-3px 1px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 16px !important;
+}
+.comment-under-box .reaction-counter img {
+    width: 25px;
+}
+.ct-product img.smile{
+    width: 25px;
+
+}
+
+
+
+
+
+/*image in pop-up div for single post/product und for comment*/
+.popup-div img{
+    width: 40px;
+    box-shadow:-3px 1px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 16px !important;
+}
+.comment-under-box .popup-div img{
+    width: 30px;
+}
+
+
+
+.fa.fa-comments-o{
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.fa.fa-star-o, .fa.fa-star {
+    font-size: 24px;
+    cursor: pointer;
+
+
+}
 
 .comment-button{
-    padding-left: 10% !important;
+    padding-left: 20% !important;
 }
-.reaction-counter img.smile {
-    width: 20px;
+
+
+
+@media (max-width: 767px){
+.comment-button{
+    padding-left: 5% !important;
 }
+}
+
+
+
 .reaction-counter span{
     color: #4c505e;
     font-weight: 500;
@@ -1759,10 +1812,7 @@ ul ul ul ul{
 }
 
 
-.comment-under-box img{
-    width: 20px;
 
-}
 #comments .comment-under-box ul{
     line-height: 1em;
 }
@@ -1809,7 +1859,7 @@ ul ul ul ul{
   display: table;
   position: relative;
   width: 100%;
-  background: #4c505e;
+  background: #bdbdbd;
 
 }
 @media (max-width: 767px) {
@@ -1832,7 +1882,7 @@ ul ul ul ul{
 .ct-tabHeader ul li {
   text-align: center;
   font-size: 17px;
-  border-bottom: 5px solid #3a3f4d;
+  border-bottom: 5px solid #98a2ba;
 }
 @media (min-width: 768px) {
   .ct-tabHeader ul li {
@@ -1898,15 +1948,15 @@ ul ul ul ul{
   border-right: 1px solid;
 }
 .ct-tabHeader--motive .active {
-  border-color: #1175d6;
+  border-color: #3a3f4d;
   background-color: #1f8bf3;
 }
 .ct-tabHeader--motive .active .ct-tabBorder {
-  border-color: #1f8bf3;
+  border-color: #3a3f4d;
 }
 .ct-tabHeader--motive .active .ct-tabBorder a {
-  background: #1f8bf3;
-  border-color: #1175d6;
+  background: #4c505e;
+  border-color: #3a3f4d;
 }
 
 .ct-tabHeader--motive .ct-tabBorder a.active {
@@ -2145,307 +2195,6 @@ ul ul ul ul{
 
 
 
-/*.hiddenfile {*/
-    /*position: fixed;*/
-    /*margin-bottom: 30%;*/
-    /*bottom: 0;*/
-    /*display: none;*/
-    /*!*width: 50%;*!*/
-    /*height: 30%;*/
-    /*background-color: #e7f6fd;*/
-	/*color: #27aae1;*/
-	/*border-width: 1px;*/
-	/*border-style: solid;*/
-	/*border-color: #27aae1;*/
-/*}*/
-
-
-/*div#header.row{*/
-    /*background-image: url("/static/image/header-background.png");*/
-    /*width:100%;*/
-    /*height:10%;*/
-    /*margin: 0px;*/
-    /*text-align: left;*/
-    /*vertical-align: middle;*/
-    /*line-height: 65px;*/
-/*}*/
-
-
-
-/*div#sidebar{*/
-
-
-    /*padding: 0px;*/
-/*}*/
-/*div#main{*/
-    /*padding: 0px;*/
-
-
-
-/*}*/
-
-/*#body{*/
-    /*margin: 0px;*/
-    /*margin-top: 10px;*/
-/*}*/
-/*div#user_infs {*/
-    /*padding: 0px;*/
-/*}*/
-/*div#user_about{*/
-    /*padding: 0px;*/
-
-
-/*}*/
-/*#max_avatar img  {*/
-    /*border-radius: 8px;*/
-    /*width: 200px;*/
-/*}*/
-
-/*.is_image img  {*/
-    /*border-radius: 8px;*/
-    /*width: 100px;*/
-/*}*/
-
-/*.is_image.product img  {*/
-    /*border-radius: 8px;*/
-    /*width: 120px;*/
-
-/*}*/
-
-/*div.is_image.product  {*/
-    /*display: block;*/
-    /*height: 120px;*/
-
-/*}*/
-
-
-/*div .post_container {*/
-    /*border: solid 1px gainsboro;*/
-    /*display: block;*/
-    /*clear: both;*/
-    /*margin-bottom: 5px;*/
-/*}*/
-
-/*.star {*/
-    /*float: right;*/
-/*}*/
-
-/*img#gold_star{*/
-    /*float: right;*/
-/*}*/
-/*img#white_star{*/
-    /*float: right;*/
-/*}*/
-
-/*.myhrline{*/
-    /*margin: 0px;*/
-    /*align : center;*/
-    /*width : 600px;*/
-    /*size: 2px;*/
-    /*color: #ff0000;*/
-
-/*}*/
-/*.myhrline.product{*/
-    /*margin: 0px;*/
-    /*align : center;*/
-    /*width : 290px;*/
-    /*size: 2px;*/
-    /*color: #ff0000;*/
-
-/*}*/
-
-
-/*.product_box {*/
-    /*display: inline-block;*/
-    /*border: solid 1px #46b8da;*/
-    /*vertical-align: bottom;*/
-    /*margin-bottom: 20px;*/
-    /*margin-right: 0px;*/
-    /*margin-left: 10px;*/
-    /*padding: 10px;*/
-    /*width: 30%;*/
-    /*height: 25%;*/
-/*}*/
-/*div.product_description{*/
-    /*display: block;*/
-    /*height: 35px;*/
-
-/*}*/
-/*div.product_title{*/
-    /*display: block;*/
-    /*height: 40px;*/
-
-/*}*/
-
-
-/*#single_post{*/
-    /*border: solid 1px lightskyblue;*/
-    /*background-color: aliceblue;*/
-/*}*/
-/*div #post_box{*/
-    /*border-bottom: solid 1px lightskyblue;*/
-/*}*/
-/*div #hiden_form1 {*/
-    /*display: none;*/
-
-/*}*/
-
-
-/*div .form-control.my_textarea{*/
-    /*width: 100%;*/
-/*}*/
-/*span.discussion{*/
-    /*color: #2b669a;*/
-
-
-/*}*/
-
-/*span.discussion:hover{*/
-    /*color: blue;*/
-
-
-/*}*/
-/*div .one_comment{*/
-    /*margin-bottom: 20px;*/
-    /*border-bottom:cornflowerblue;*/
-/*}*/
-
-/*span.comment_inf{*/
-    /*color: grey;*/
-/*}*/
-
-/*li {*/
-    /*list-style-type: none;*/
-
-
-/*}*/
-
-/*ul {*/
-    /*list-style-type: none;*/
-    /*margin-left:20px;*/
-    /*padding:0;*/
-    /*margin-bottom:10px;*/
-/*}*/
-
-
-/*ul ul{*/
-  /*margin-left:25px;*/
-/*}*/
-
-/*!* Third Level *!*/
-/*ul ul ul{*/
-  /*margin-left:25px;*/
-/*}*/
-/*ul ul ul ul{*/
-  /*margin-left:25px;*/
-/*}*/
-/*ul ul ul ul ul {*/
-  /*margin-left:0px;*/
-/*}*/
-
-/*ul li{*/
-    /*border-left: solid 1px lavender;*/
-/*}*/
-/*ul li .leftimg {*/
-    /*width: 35px;*/
-
-/*}*/
-
-/*li{*/
-    /*margin-bottom: 15px;*/
-/*}*/
-
-/*.leftimg {*/
-    /*float:left; !* Выравнивание по левому краю *!*/
-    /*margin: 7px 7px 7px 0; !* Отступы вокруг картинки *!*/
-    /*width: 50px;*/
-    /*display:inline; !* для IE6, чтоб отступ слева не удвоился *!*/
-
-   /*}*/
-/*.description{*/
-    /*overflow:hidden;*/
-/*}*/
-/** html .description{*/
-    /*float:left;*/
-/*}*/
-
-/*p.under_comment{*/
-    /*margin-bottom: 5px;*/
-/*}*/
-
-/*#many_post{*/
-        /*text-align: center;*/
-
-    /*padding: 0;*/
-    /*position: fixed;*/
-    /*float: none;*/
-    /*background-color: aliceblue;*/
-    /*margin-left: 50%;*/
-    /*border: solid 1px lightskyblue;*/
-
-/*}*/
-/*.single.one_post{*/
-    /*text-align: center;*/
-    /*border-bottom: solid 1px lightskyblue;*/
-
-/*}*/
-
-/*.messages-container {*/
-    /*position: fixed;*/
-    /*margin-bottom: 30%;*/
-    /*bottom: 0;*/
-    /*display: none;*/
-    /*width: 50%;*/
-    /*height: 60px;*/
-    /*background-color: #e7f6fd;*/
-	/*color: #27aae1;*/
-	/*border-width: 1px;*/
-	/*border-style: solid;*/
-	/*border-color: #27aae1;*/
-/*}*/
-
-/*div.messages-container p{*/
-    /*color: red;*/
-/*}*/
-
-
-/*#page {*/
-  /*background: #FFF;*/
-  /*padding: 20px;*/
-  /*margin: 20px;*/
-/*}*/
-
-/*#demo-basic {*/
-  /*width: 200px;*/
-  /*height: 300px;*/
-/*}*/
-
-
-/*.parent-div, .popup-div{*/
-    /*width: 100%;*/
-   /*height: 100%;*/
-   /*position:absolute;*/
-    /*bottom: 75%;*/
-
-   /*left:20px;*/
-
-   /*background-color: lightskyblue;*/
-/*}*/
-/*.popup-div{*/
-    /*width: 40%;*/
-   /*display:none;*/
-    /*z-index:10;*/
-/*}*/
-
-
-/*.smile-container {*/
-
-  /*position: relative;*/
-/*}*/
-
-/*img.liked, img.unliked{*/
-    /*width: 30px;*/
-/*}*/
 
 
 .ct-fw-300 {
@@ -2832,6 +2581,11 @@ ul ul ul ul{
 
 /*/user*-----------------------------------------------------------------------*!*/
 
+
+
+/*.user-page{*/
+    /*padding-left: 10%;*/
+/*}*/
 @media (max-width: 767px){
 
 .avatar-edit{
@@ -3366,10 +3120,7 @@ img:hover + .avatar-edit{
 
 }
 
-.ct-product img.smile{
-    width: 20px !important;
 
- }
 
 .ct-u-motiveDark {
     color: #4c505e !important;
