--- a/templates/comment_box/product_comment_box.html
+++ b/templates/comment_box/product_comment_box.html
@@ -1,6 +1,41 @@
 
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>-->
+
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>-->
 
 {% from 'helpers.html' import product_comment_macro with context %}
                     {{ product_comment_macro(comment, dict_like) }}
+<script>
+$("form.edit_comment").submit(function(event) {
+    var id = "{{comment.id}}";
+    alert(123);
+    var formData = new FormData($(this)[0]);
+    $.ajax({
+        type: "POST",
+        url: $(this).attr('action'),
+        data: formData,
+        processData: false,
+        contentType: false,
+
+        success: function (data) {
+            $(".one_comment#comment" + id).html(data.comment);
+            $("textarea#text").val("");
+
+        },
+        error: function (xhr, str) {
+            alert('Mistake ' + xhr.responseCode);
+        }
+    });
+    event.preventDefault();
+});
+$(document).ready(function() {
+
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.post-form.comment-login").on("click", RenderPostCommentForm);
+    $(".discussion.product-form.comment-login").on("click", RenderProductCommentForm);
+});
+
+
+</script>
