--- a/templates/comment_form.html
+++ b/templates/comment_form.html
@@ -52,6 +52,13 @@ $(".answer_form").submit(function(event) {
         }
     });
     event.preventDefault();
+    $(document).ready(function() {
+
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.post-form.comment-login").on("click", RenderPostCommentForm);
+});
 });
 
 </script>
