--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,5 +1,5 @@
 
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>-->
 
 {% from 'helpers.html' import post_comment_macro with context %}
     {%- for key, value in comment_tree.items() recursive -%}
@@ -21,40 +21,15 @@
              </ul>
         {% endif %}
     {%- endfor -%}
-
 <script>
-    $(document).ready(function() {
-$(".discussion.post-form.comment-login").click(function (event){
-    event.preventDefault();
-    event.stopImmediatePropagation();
+$(document).ready(function() {
 
-    var id = $(this).attr('id');
-    $(".answer#answer" + id).slideToggle();
-    var user = $(this).attr('user');
-    var post = $(this).attr('post_id');
-    $.ajax({
-        type: "POST",
-        url: '/comment_form',
-        data: "parent_id=" + id + "&post_id=" + post,
-        success: function (data) {
-             $(".answer#answer" + id).html(data.com_form);
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.post-form.comment-login").on("click", RenderPostCommentForm);
 
-            $("textarea#text").val(user + ", ");
 
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
-    });
-    event.preventDefault();
-
-});
 });
 
 </script>
-
-
-
-
-
-
