--- a/templates/home.html
+++ b/templates/home.html
@@ -51,24 +51,22 @@
                 </ul>
             </div>
         </div>
-    </nav>
-{% endblock %}
+    </nav>{% endblock %}
 {% block body %}
     <div class="section"></div>
-    <section class="ct-mediaSection" data-height="100%">
+    <section class="ct-mediaSection">
         <div class="flexslider ct-flexslider--fw ct-flexslider--controls3 ct-flexslider--mainSlider ct-u-marginBoth0 ct-js-flexslider"
              data-pauseonaction="false" data-directionnav="true" data-animations="true" data-height="100%"
              data-controlnav="true" data-animationloop="true" data-controlscontainer="ct-containerAbsolute"
-             data-slideshow="true" style="min-height: 100%; height: 545px;">
+             data-slideshow="true" style="max-height: 30%; height: 345px;">
 
             <div class="ct-flexslider-progress">
                 <div class="ct-flexslider-progressBar" , style="width: 0px;">
 
                 </div>
             </div>
-            <ul class="slides"
-                style="width: 1200%; transition-duration: 0s; transform: translate3d(-2298px, 0px, 0px);">
-                <li style="background-image: url({{ url_for('static',filename="image/flexslider/carusel1.jpg") }}); min-height: 100%; height: 100%; width: 1149px; float: left; display: block;
+            <ul class="slides">
+                <li style="background-image: url({{ url_for('static',filename="image/flexslider/carusel1.jpg") }}); min-height: 100%; height: 30%; width: 1149px; float: left; display: block;
                         class=" ">
 
                 </li>
