--- a/templates/product_comment_form.html
+++ b/templates/product_comment_form.html
@@ -55,4 +55,13 @@ $(".answer_form").submit(function(event) {
     event.preventDefault();
 });
 
+$(document).ready(function() {
+
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.product-form.comment-login").on("click", RenderProductCommentForm);
+});
+
+
 </script>
