--- a/templates/product_comments.html
+++ b/templates/product_comments.html
@@ -1,5 +1,5 @@
 
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>-->
 
 {% from 'helpers.html' import product_comment_macro with context %}
     {%- for key, value in comment_tree.items() recursive -%}
@@ -22,36 +22,13 @@
              </ul>
         {% endif %}
     {%- endfor -%}
-
-
-
-
 <script>
 $(document).ready(function() {
 
-// if user not the comments'author, user can discuss other comment
-// data send by ajax on server where render template with updated comment part
-$(".discussion.product-form.comment-login").click(function (event){
-    var id = $(this).attr('id');
-    $(".answer#answer" + id).slideToggle();
-    var user = $(this).attr('user');
-    var product = $(this).attr('product_id');
-    $.ajax({
-        type: "POST",
-        url: '/product_comment_form',
-        data: "parent_id=" + id + "&product_id=" + product,
-        success: function (data) {
-             $(".answer#answer" + id).html(data.com_form);
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.product-form.comment-login").on("click", RenderProductCommentForm);
 
-            $("textarea#text").val(user + ", ");
-
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
-    });
-    event.preventDefault();
 });
-});
-
 </script>
