--- a/templates/single_product.html
+++ b/templates/single_product.html
@@ -54,10 +54,10 @@
                     <div class="reaction-counter">
 
 
-                        <span id="like_count_like_product_{{product.id}}">{{ product.like_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-like.png" )}}" width=20/>
-                        <span id="unlike_count_like_product_{{product.id}}">{{ product.unlike_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-unlike.png" )}}" width=20/>
-                        <span id="funny_count_like_product_{{product.id}}">{{ product.funny_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-funny.png" )}}" width=20/>
-                        <span id="angry_count_like_product_{{product.id}}">{{ product.angry_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-angry.png" )}}" width=20/>
+                        <span id="like_count_like_product_{{product.id}}">{{ product.like_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-like.png" )}}" />
+                        <span id="unlike_count_like_product_{{product.id}}">{{ product.unlike_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-unlike.png" )}}"/>
+                        <span id="funny_count_like_product_{{product.id}}">{{ product.funny_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-funny.png" )}}" />
+                        <span id="angry_count_like_product_{{product.id}}">{{ product.angry_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-angry.png" )}}"/>
 
 
                     </div>
@@ -73,7 +73,7 @@
                                         {% if product_liked %}
 
                                             {% if product_liked.type == "like"%}
-                                                <img class="liked img-rounded" src="{{ url_for('static',filename="image/reaction-like.png" )}}"
+                                                <img class="liked img-rounded" src="{{ url_for('static',filename="image/button-liked.png" )}}"
                                                     obj_id={{product.id}} url = "like_product" />
 
                                             {% elif product_liked.type == "unlike"%}
@@ -187,7 +187,7 @@
 
 
 
-                                    <li role="presentation" class="active">
+                                    <li role="presentation" class="">
                                         <div class="ct-tabBorder">
                                             <a href="" onclick="product_comment({{ product.id }}, 'data', event);" role="tab" data-toggle="tab">Latest</a>
                                         </div>
@@ -195,7 +195,7 @@
 
                                         </div>
                                     </li>
-                                     <li role="presentation" class="active">
+                                     <li role="presentation" class="">
                                         <div class="ct-tabBorder">
                                             <a href="" onclick="product_comment({{ product.id }}, 'rating', event);" role="tab" data-toggle="tab">Popular</a>
                                         </div>
@@ -242,7 +242,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                   <div class="panel-title">
-                                    <a class="collapsed" href="#">
+                                    <a class="collapsed" href="{{url_for('add_post')}}">
                                         new post
                                        <div class="plus ct-Diamond ct-Diamond--motive"></div>
                                     </a>
@@ -252,7 +252,7 @@
                             <div class="panel panel-default">
                             <div class="panel-heading">
                               <div class="panel-title">
-                                <a class="collapsed" href="#">
+                                <a class="collapsed" href="{{url_for('add_product')}}">
                                     new product
                                    <div class="plus ct-Diamond ct-Diamond--motive"></div>
                                 </a>
