--- a/templates/user_container/user_contain_prod_comment.html
+++ b/templates/user_container/user_contain_prod_comment.html
@@ -1,6 +1,6 @@
 {% from 'helpers.html' import product_comment_macro with context %}
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}" async></script>
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}" async></script>-->
+<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>-->
 
 {% if comments|length >= 1 %}
     <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
@@ -44,6 +44,12 @@
 <script>
 $(document).ready(function() {
 
-$("li.comment_block").on("click", UpdateCommentContainer);
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.product-form.comment-login").on("click", RenderProductCommentForm);
+    $(".ct-tabHeader li.comment_block").on("click", UpdateCommentContainer);
+
+
  });
 </script>
