--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -2,7 +2,7 @@
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 
 {% block body %}
-<section class="ct-u-paddingBo40">
+<section class="ct-u-paddingBoth40">
 <div class="container">
     <div class="ct-sectionHeader ct-u-paddingBoth20">
         <h2 class="ct-u-size34">add product</h2>
