--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 {% block body %}
-<section class="ct-errorText text-center text-uppercase ct-u-paddingBottom100">
+<section class="ct-errorText text-center text-uppercase  ct-u-paddingTop0 ct-u-paddingBottom100">
     <div class="container">
         <h1>404</h1>
         <p class="ct-u-size34 ct-u-paddingTop20 ct-u-paddingBottom40">This page could not be found</p>
