--- a/templates/user_container/user_contain_post.html
+++ b/templates/user_container/user_contain_post.html
@@ -1,6 +1,6 @@
 {% from 'helpers.html' import posts_macro with context %}
-<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/single_post.js") }}"></script>-->
-<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>-->
+{#<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/single_post.js") }}"></script>-->#}
+{#<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>-->#}
 
 {% if posts|length >= 1 %}
     <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
