--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,5 +1,5 @@
 
-<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>-->
+{#<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>-->#}
 
 {% from 'helpers.html' import post_comment_macro with context %}
     {%- for key, value in comment_tree.items() recursive -%}
