--- a/templates/single_product.html
+++ b/templates/single_product.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% from 'helpers.html' import popup_div_macro with context %}
+{% from 'helpers.html' import product_comment_macro with context %}
+
 {% block body %}
     <section class="ct-u-paddingBottom10">
         <div class="container">
@@ -211,7 +213,26 @@
                                     <div class="ct-u-paddingBoth30" id="comments">
 
 
-                                         {% include "product_comments.html" %}
+                                         {%- for key, value in comment_tree.items() recursive -%}
+
+                                            {% if key %}
+                                                <ul class="ct-mediaList list-unstyled">
+                                                {% for comment in comments %}
+                                                    {% if comment.id == key %}
+                                                            {% if comment.deleted %}
+                                                                comment has been deleted
+
+                                                            {%else%}
+                                                                <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ product_comment_macro(comment, dict_like) }}</li>
+
+
+                                                            {% endif %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                                    <ul class="ct-mediaList list-unstyled">{{ loop(value.items()) }}</ul>
+                                                 </ul>
+                                            {% endif %}
+                                        {%- endfor -%}
 
 
 
@@ -318,6 +339,16 @@
      preload: [0, 1] // Will preload 0 - before current, and 1 after the current image
  }
  });
+
+
+$(document).ready(function() {
+
+    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+    $('.smile').on("click", AddReaction);
+    ShowReactionDiv();
+    $(".discussion.product-form.comment-login").on("click", RenderProductCommentForm);
+
+});
 </script>
 {% endblock %}
 
